--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true
-  }
+  },
+  "include": ["src"]
 }
