--- a/package.json
+++ b/package.json
@@ -28,13 +28,10 @@
     "dist"
   ],
   "dependencies": {
-    "chalk": "^5.3.0",
-    "open": "^9.1.0",
-    "yargs": "^17.6.2"
+    "open": "^9.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.17.6",
-    "@types/yargs": "^17.0.24",
+    "@types/node": "^20.12.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
