--- a/package.json
+++ b/package.json
@@ -12,18 +12,12 @@
   "license": "ISC",
   "exports": {
     ".": {
-      "types": "./dist/types/main.d.ts",
-      "default": "./dist/main.js"
-    },
-    "./engine": {
-      "types": "./dist/types/engine.d.ts",
-      "default": "./dist/engine.js"
-    },
-    "./browser": {
-      "types": "./dist/types/browser.d.ts",
-      "default": "./dist/browser.js"
+      "types": "./dist/types/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
+  "main": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
   "files": [
     "dist"
   ],
@@ -42,15 +36,15 @@
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LexBorisoff/open-browser.git"
+    "url": "git+https://github.com/LexBorisoff/browser-search.git"
   },
-  "homepage": "https://github.com/LexBorisoff/open-browser#readme",
+  "homepage": "https://github.com/LexBorisoff/browser-search#readme",
   "bugs": {
-    "url": "https://github.com/LexBorisoff/open-browser/issues"
+    "url": "https://github.com/LexBorisoff/browser-search/issues"
   },
   "keywords": [
     "search",
