--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     ".": {
       "default": "./dist/index.js",
       "types": "./dist/types/index.d.ts"
+    },
+    "./matchers": {
+      "default": "./dist/matchers/matchers.js",
+      "types": "./dist/types/matchers/matchers.d.ts"
     }
   },
   "main": "./dist/index.js",
