--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lexjs/browser-search",
-  "version": "0.0.3",
+  "version": "0.0.4-beta.1",
   "description": "Library for creating and opening browser search queries",
   "type": "module",
   "scripts": {
