--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lexjs/web-search",
-  "version": "0.0.1-beta.3",
+  "version": "1.1.2",
   "description": "Library for creating and opening web search queries",
   "type": "module",
   "scripts": {
